[package]
name = "rust_module"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
napi = { version = "3", features = ["napi6"] }
napi-derive = "3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"

[build-dependencies]
napi-build = "2.2.3"
